[package]
name = "chores"
version = "0.1.0"
edition = "2021"
authors = ["Kamila Chyla <kamila.chyla@gmail.com>"]
description = "Small CLI application for managing chores in my househld"
readme ="README.md"
repository = "https://github.com/kamchy/chores"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.0", features = ["derive"] }
human-panic = "2.0.0"
