[package]
name = "chores"
version = "0.1.0"
edition = "2021"
authors = ["Kamila Chyla <kamila.chyla@gmail.com>"]
description = "Small CLI application for managing chores in my househld"
readme ="README.md"
repository = "https://github.com/kamchy/rust-chores"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
chrono = "0.4.38"
clap = { version = "4.0", features = ["derive"] }
human-panic = "2.0.0"
rusqlite = {version = "0.31.0", features = ["bundled"]}
tabled = "0.15.0"
thiserror = "1.0.59"


